--- a/app/ElizaApp/app/src/main/res/layout/activity_main.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Forward"
-        tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="150dp"
         android:layout_marginLeft="150dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginStart="150dp" />
 
     <Button
         android:id="@+id/btnStop"
@@ -28,19 +28,16 @@
         tools:layout_constraintLeft_creator="1"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/btnForward"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/btnForward" />
 
     <Button
         android:id="@+id/btnBackward"
         android:layout_width="104dp"
-        android:layout_height="47dp"
+        android:layout_height="48dp"
         android:text="Backward"
-        tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/btnStop"
-        android:layout_marginLeft="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/btnStop" />
 
     <TextView
@@ -48,12 +45,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        tools:layout_constraintBaseline_creator="1"
         tools:layout_constraintLeft_creator="1"
         android:layout_marginBottom="7dp"
         app:layout_constraintBottom_toTopOf="@+id/tbCC"
         app:layout_constraintLeft_toRightOf="@+id/btnForward"
-        android:layout_marginLeft="30dp" />
+        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp" />
 
 
     <ToggleButton
@@ -61,11 +58,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cruise Control"
-        tools:layout_constraintBottom_creator="1"
         tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toRightOf="@+id/btnBackward"
         android:layout_marginLeft="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnForward" />
+        app:layout_constraintTop_toBottomOf="@+id/btnForward"
+        android:layout_marginStart="8dp" />
 
 </android.support.constraint.ConstraintLayout>
