--- a/app/ElizaApp/app/src/main/res/layout/activity_main.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_main.xml
@@ -35,10 +35,10 @@
         android:layout_width="104dp"
         android:layout_height="48dp"
         android:text="Backward"
-        tools:layout_constraintLeft_creator="1"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/btnStop"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnStop"
-        app:layout_constraintLeft_toLeftOf="@+id/btnStop" />
+        app:layout_constraintTop_toBottomOf="@+id/btnStop" />
 
     <TextView
         android:id="@+id/txtResult"
@@ -64,5 +64,15 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/btnForward"
         android:layout_marginStart="8dp" />
+
+    <Button
+        android:id="@+id/switchScreen"
+        android:layout_width="104dp"
+        android:layout_height="39dp"
+        android:text="Switch"
+        android:layout_marginLeft="0dp"
+        app:layout_constraintLeft_toLeftOf="@+id/btnBackward"
+        android:layout_marginTop="64dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnBackward" />
 
 </android.support.constraint.ConstraintLayout>
