--- a/app/ElizaApp/app/src/main/res/layout/activity_connect.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_connect.xml
@@ -12,40 +12,50 @@
         android:layout_width="40dp"
         android:layout_height="29dp"
         android:text="Port:"
-        tools:layout_editor_absoluteX="126dp"
-        tools:layout_editor_absoluteY="259dp" />
+        android:layout_marginTop="39dp"
+        app:layout_constraintTop_toBottomOf="@+id/ipText"
+        app:layout_constraintLeft_toRightOf="@+id/textView"
+        android:layout_marginLeft="47dp" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/portText"
         android:layout_width="123dp"
         android:layout_height="45dp"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="177dp"
-        tools:layout_editor_absoluteY="243dp" />
+        app:layout_constraintLeft_toRightOf="@+id/textView2"
+        android:layout_marginLeft="14dp"
+        android:layout_marginTop="23dp"
+        app:layout_constraintTop_toBottomOf="@+id/ipText" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="25dp"
         android:layout_height="30dp"
         android:text="IP:"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="190dp" />
+        android:layout_marginLeft="48dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="190dp" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/ipText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="number"
-        tools:layout_editor_absoluteX="85dp"
-        tools:layout_editor_absoluteY="177dp" />
+        app:layout_constraintLeft_toRightOf="@+id/textView"
+        android:layout_marginLeft="12dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="177dp" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/connectButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Connect"
-        tools:layout_editor_absoluteX="212dp"
-        tools:layout_editor_absoluteY="314dp" />
+        android:layout_marginTop="21dp"
+        app:layout_constraintTop_toBottomOf="@+id/portText"
+        app:layout_constraintLeft_toRightOf="@+id/textView2"
+        android:layout_marginLeft="48dp" />
 </android.support.constraint.ConstraintLayout>
