--- a/app/ElizaApp/app/src/main/res/layout/activity_connect.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_connect.xml
@@ -42,12 +42,12 @@
         android:id="@+id/ipText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="number"
-        app:layout_constraintLeft_toRightOf="@+id/textView"
         android:layout_marginLeft="12dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="177dp" />
+        android:layout_marginTop="177dp"
+        android:ems="10"
+        android:inputType="text"
+        app:layout_constraintLeft_toRightOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/connectButton"
