--- a/app/ElizaApp/app/src/main/res/layout/activity_main.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,16 @@
     tools:context="com.example.walling.elizaapp.MainActivity">
 
     <Button
+        android:id="@+id/buttonDebug"
+        android:layout_width="104dp"
+        android:layout_height="39dp"
+        android:layout_marginRight="70dp"
+        android:layout_marginTop="67dp"
+        android:text="Debug"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnBackward" />
+
+    <Button
         android:id="@+id/btnForward"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,10 +79,10 @@
         android:id="@+id/switchScreen"
         android:layout_width="104dp"
         android:layout_height="39dp"
-        android:text="Switch"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/btnBackward"
-        android:layout_marginTop="64dp"
+        android:layout_marginLeft="76dp"
+        android:layout_marginTop="67dp"
+        android:text="Connect"
+        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnBackward" />
 
 </android.support.constraint.ConstraintLayout>
