--- a/app/ElizaApp/app/src/main/res/layout/activity_debug.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_debug.xml
@@ -13,6 +13,7 @@
         android:layout_marginLeft="42dp"
         android:layout_marginTop="93dp"
         android:text="Data will show here"
+        android:textSize="25sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
