--- a/app/ElizaApp/app/src/main/res/layout/activity_connect.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_connect.xml
@@ -12,6 +12,7 @@
         android:layout_width="40dp"
         android:layout_height="29dp"
         android:text="Port:"
+        android:textSize="18sp"
         android:layout_marginTop="39dp"
         app:layout_constraintTop_toBottomOf="@+id/ipText"
         app:layout_constraintLeft_toRightOf="@+id/textView"
@@ -44,6 +45,7 @@
         android:layout_width="25dp"
         android:layout_height="30dp"
         android:text="IP:"
+        android:textSize="18sp"
         android:layout_marginLeft="48dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
