--- a/app/ElizaApp/app/src/main/res/layout/activity_main.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_main.xml
@@ -85,4 +85,24 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnBackward" />
 
+    <Button
+        android:id="@+id/btnRight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Right"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnBackward"
+        android:layout_marginRight="-44dp"
+        app:layout_constraintRight_toRightOf="@+id/btnBackward" />
+    <Button
+        android:id="@+id/btnLeft"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Left"
+        app:layout_constraintRight_toLeftOf="@+id/btnRight"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/btnBackward" />
+
+
 </android.support.constraint.ConstraintLayout>
