--- a/app/ElizaApp/app/src/main/res/layout/activity_main.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_main.xml
@@ -5,62 +5,44 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.walling.elizaapp.MainActivity">
+    tools:context="com.example.walling.elizaapp.MainActivity"
+    tools:layout_editor_absoluteY="25dp"
+    tools:layout_editor_absoluteX="0dp">
 
     <Button
         android:id="@+id/buttonDebug"
         android:layout_width="104dp"
-        android:layout_height="39dp"
-        android:layout_marginRight="70dp"
-        android:layout_marginTop="67dp"
+        android:layout_height="48dp"
         android:text="Debug"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnBackward" />
-
-    <Button
-        android:id="@+id/btnForward"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Forward"
-        tools:layout_constraintLeft_creator="1"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="150dp"
-        android:layout_marginLeft="150dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="150dp" />
+        android:layout_marginTop="-5dp"
+        android:layout_marginRight="-15dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/btnStop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Stop"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnForward"
-        app:layout_constraintLeft_toLeftOf="@+id/btnForward" />
-
-    <Button
-        android:id="@+id/btnBackward"
-        android:layout_width="104dp"
-        android:layout_height="48dp"
-        android:text="Backward"
-        android:layout_marginLeft="0dp"
-        app:layout_constraintLeft_toLeftOf="@+id/btnStop"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnStop" />
+        android:layout_marginStart="98dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/speedBar"
+        android:layout_marginLeft="109dp"
+        android:layout_marginTop="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/steerBar" />
 
     <TextView
         android:id="@+id/txtResult"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="7dp"
-        app:layout_constraintBottom_toTopOf="@+id/tbCC"
-        app:layout_constraintLeft_toRightOf="@+id/btnForward"
-        android:layout_marginLeft="30dp"
-        android:layout_marginStart="30dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/tbCC"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintVertical_bias="0.516"
+        app:layout_constraintRight_toRightOf="parent" />
 
 
     <ToggleButton
@@ -68,41 +50,45 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Cruise Control"
-        tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toRightOf="@+id/btnBackward"
+        android:layout_marginStart="44dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toRightOf="@+id/btnStop"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnForward"
-        android:layout_marginStart="8dp" />
+        android:layout_marginTop="35dp"
+        app:layout_constraintTop_toBottomOf="@+id/steerBar"
+        app:layout_constraintHorizontal_bias="0.071" />
 
     <Button
         android:id="@+id/switchScreen"
         android:layout_width="104dp"
-        android:layout_height="39dp"
-        android:layout_marginLeft="76dp"
-        android:layout_marginTop="67dp"
+        android:layout_height="48dp"
         android:text="Connect"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnBackward" />
+        app:layout_constraintRight_toLeftOf="@+id/buttonDebug"
+        android:layout_marginRight="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="0dp" />
 
-    <Button
-        android:id="@+id/btnRight"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Right"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnBackward"
-        android:layout_marginRight="-44dp"
-        app:layout_constraintRight_toRightOf="@+id/btnBackward" />
-    <Button
-        android:id="@+id/btnLeft"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Left"
-        app:layout_constraintRight_toLeftOf="@+id/btnRight"
-        android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/btnBackward" />
+    <SeekBar
+        android:id="@+id/speedBar"
+        android:layout_width="259dp"
+        android:layout_height="54dp"
+        android:rotation="270"
+        tools:layout_editor_absoluteX="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="8dp" />
+
+    <SeekBar
+        android:id="@+id/steerBar"
+        android:layout_width="323dp"
+        android:layout_height="42dp"
+        app:layout_constraintLeft_toRightOf="@+id/speedBar"
+        android:layout_marginLeft="9dp"
+        android:layout_marginTop="98dp"
+        app:layout_constraintTop_toBottomOf="@+id/switchScreen" />
 
 
 </android.support.constraint.ConstraintLayout>
