--- a/app/ElizaApp/app/src/main/res/layout/activity_connect.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_connect.xml
@@ -91,4 +91,37 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginBottom="13dp"
         app:layout_constraintBottom_toTopOf="@+id/textViewConnectStatus" />
+
+    <Button
+        android:id="@+id/testButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TEST"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/checkConnectionButton"
+        app:layout_constraintHorizontal_bias="0.971"
+        app:layout_constraintVertical_bias="0.89" />
+
+    <EditText
+        android:id="@+id/serverTestEditText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.632"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/testButton"
+        app:layout_constraintTop_toBottomOf="@+id/textViewConnectStatus"
+        app:layout_constraintVertical_bias="0.813" />
 </android.support.constraint.ConstraintLayout>
