--- a/app/ElizaApp/app/src/main/res/layout/activity_main.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,25 @@
     tools:layout_editor_absoluteY="25dp"
     tools:layout_editor_absoluteX="0dp">
 
+    <ToggleButton
+        android:id="@+id/platooningButton"
+        android:layout_width="187dp"
+        android:layout_height="47dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="54dp"
+        android:text="Cruise Control"
+        android:textOff="start platooning"
+        android:textOn="stop platooning"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toRightOf="@+id/btnStop"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/steerBar"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/cruiseControlButton" />
+
     <Button
         android:id="@+id/buttonDebug"
         android:layout_width="104dp"
@@ -26,39 +45,34 @@
         android:text="Stop"
         android:layout_marginStart="98dp"
         android:layout_marginEnd="8dp"
-        app:layout_constraintLeft_toRightOf="@+id/speedBar"
-        android:layout_marginLeft="109dp"
-        android:layout_marginTop="35dp"
-        app:layout_constraintTop_toBottomOf="@+id/steerBar" />
-
-    <TextView
-        android:id="@+id/txtResult"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginLeft="98dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/tbCC"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintVertical_bias="0.516"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintVertical_bias="0.498" />
 
 
     <ToggleButton
-        android:id="@+id/tbCC"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Cruise Control"
-        android:layout_marginStart="44dp"
+        android:id="@+id/cruiseControlButton"
+        android:layout_width="187dp"
+        android:layout_height="47dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toRightOf="@+id/btnStop"
         android:layout_marginLeft="8dp"
-        android:layout_marginTop="35dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="90dp"
+        android:text="Cruise Control"
+        android:textOff="START CRUISE CONTROL"
+        android:textOn="stop cruise control"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintLeft_toRightOf="@+id/btnStop"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/steerBar"
-        app:layout_constraintHorizontal_bias="0.071" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/switchScreen"
@@ -75,20 +89,62 @@
         android:layout_width="259dp"
         android:layout_height="54dp"
         android:rotation="270"
-        tools:layout_editor_absoluteX="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintVertical_bias="0.498"
+        android:layout_marginRight="406dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <SeekBar
         android:id="@+id/steerBar"
         android:layout_width="323dp"
         android:layout_height="42dp"
         app:layout_constraintLeft_toRightOf="@+id/speedBar"
-        android:layout_marginLeft="9dp"
-        android:layout_marginTop="98dp"
+        android:layout_marginLeft="64dp"
+        android:layout_marginTop="104dp"
         app:layout_constraintTop_toBottomOf="@+id/switchScreen" />
+
+    <Button
+        android:id="@+id/setSpeedButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="set speed"
+        app:layout_constraintRight_toLeftOf="@+id/cruiseControlButton"
+        android:layout_marginRight="13dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/platooningButton"
+        app:layout_constraintVertical_bias="1.0" />
+
+    <EditText
+        android:id="@+id/setSpeedEditText"
+        android:layout_width="165dp"
+        android:layout_height="41dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        app:layout_constraintRight_toLeftOf="@+id/setSpeedButton"
+        android:layout_marginRight="6dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Speed in cm/s"
+        android:layout_marginBottom="7dp"
+        app:layout_constraintBottom_toTopOf="@+id/setSpeedEditText"
+        app:layout_constraintLeft_toRightOf="@+id/btnStop"
+        android:layout_marginLeft="16dp"
+        app:layout_constraintRight_toLeftOf="@+id/setSpeedButton"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/steerBar"
+        app:layout_constraintHorizontal_bias="0.561"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </android.support.constraint.ConstraintLayout>
