--- a/app/ElizaApp/app/src/main/res/layout/activity_main.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_main.xml
@@ -29,16 +29,6 @@
         app:layout_constraintBottom_toTopOf="@+id/cruiseControlButton" />
 
     <Button
-        android:id="@+id/buttonDebug"
-        android:layout_width="104dp"
-        android:layout_height="48dp"
-        android:text="Debug"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="-5dp"
-        android:layout_marginRight="-15dp"
-        app:layout_constraintRight_toRightOf="parent" />
-
-    <Button
         android:id="@+id/btnStop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -78,14 +68,14 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/switchScreen"
-        android:layout_width="104dp"
-        android:layout_height="48dp"
-        android:text="Connect"
-        app:layout_constraintRight_toLeftOf="@+id/buttonDebug"
-        android:layout_marginRight="0dp"
+        android:id="@+id/dcButton"
+        android:layout_width="112dp"
+        android:layout_height="47dp"
+        android:layout_marginTop="0dp"
+        android:text="disconnect"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="0dp" />
+        android:layout_marginRight="2dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <SeekBar
         android:id="@+id/speedBar"
@@ -107,7 +97,7 @@
         app:layout_constraintLeft_toRightOf="@+id/speedBar"
         android:layout_marginLeft="64dp"
         android:layout_marginTop="104dp"
-        app:layout_constraintTop_toBottomOf="@+id/switchScreen" />
+        app:layout_constraintTop_toBottomOf="@+id/dcButton" />
 
     <Button
         android:id="@+id/setSpeedButton"
@@ -160,7 +150,7 @@
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintLeft_toLeftOf="@+id/steerBar"
         app:layout_constraintRight_toRightOf="@+id/steerBar"
-        app:layout_constraintTop_toBottomOf="@+id/switchScreen" />
+        app:layout_constraintTop_toBottomOf="@+id/dcButton" />
 
 
 </android.support.constraint.ConstraintLayout>
