--- a/app/ElizaApp/app/src/main/res/layout/activity_main.xml
+++ b/app/ElizaApp/app/src/main/res/layout/activity_main.xml
@@ -16,34 +16,29 @@
         android:layout_marginTop="20dp"
         android:text="Speed"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="15dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="@+id/speedBar"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toTopOf="@+id/speedBar"
-        app:layout_constraintHorizontal_bias="0.126"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/speedBar" />
 
     <ToggleButton
         android:id="@+id/autoSteerButton"
         android:layout_width="187dp"
         android:layout_height="47dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="20dp"
         android:layout_marginStart="44dp"
         android:text="Cruise Control"
         android:textOff="start autosteering"
         android:textOn="stop autosteering"
-        app:layout_constraintHorizontal_bias="0.707"
-        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_editor_absoluteY="277dp"
+        app:layout_constraintLeft_toRightOf="@+id/btnStop"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/cruiseControlButton"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintHorizontal_bias="0.52" />
 
     <Button
         android:id="@+id/btnStop"
@@ -53,14 +48,14 @@
         android:layout_marginEnd="8dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.65"
+        app:layout_constraintVertical_bias="0.655"
         android:layout_marginTop="138dp"
         android:layout_marginBottom="50dp"
-        android:layout_marginLeft="65dp"
-        app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintHorizontal_bias="0.14" />
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="@+id/speedBar"
+        app:layout_constraintHorizontal_bias="0.274" />
 
 
     <ToggleButton
@@ -103,7 +98,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
         app:layout_constraintVertical_bias="0.498"
-        android:layout_marginRight="480dp"
+        android:layout_marginRight="473dp"
         android:progress="25"
         app:layout_constraintRight_toRightOf="parent" />
 
